--- a/spmdv2-web/src/main/resources/application.yml
+++ b/spmdv2-web/src/main/resources/application.yml
@@ -5,3 +5,8 @@ server:
 spring:
   profiles:
     active: dev
+  datasource:
+    url: jdbc:mysql://localhost:3306/spmd?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: admin
+    driver-class-name: com.mysql.cj.jdbc.Driver
