--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,13 @@
     <properties>
         <java.version>1.8</java.version>
         <revision>1.0.0-SNAPSHOT</revision>
-        <mybatis-plus.version>3.4.0</mybatis-plus.version>
+        <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <velocity.version>2.3</velocity.version>
         <mysql.version>8.0.32</mysql.version>
         <springboot.version>2.7.10</springboot.version>
         <common.beanutils.version>1.8.0</common.beanutils.version>
         <commons.collections.version>3.2.2</commons.collections.version>
+        <freemarker.version>2.3.32</freemarker.version>
     </properties>
     <!-- 全局通用依赖 -->
     <dependencies>
@@ -97,17 +98,11 @@
                 <artifactId>mybatis-plus-generator</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
-            <!-- 模板引擎 -->
+            <!-- freemarker -->
             <dependency>
-                <groupId>org.apache.velocity</groupId>
-                <artifactId>velocity-engine-core</artifactId>
-                <version>${velocity.version}</version>
-            </dependency>
-            <!--Thymeleaf模板依赖-->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-thymeleaf</artifactId>
-                <version>${springboot.version}</version>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>${freemarker.version}</version>
             </dependency>
             <!--添加MySQL驱动依赖 -->
             <dependency>
