--- a/spmdv2-web/src/main/resources/application.yml
+++ b/spmdv2-web/src/main/resources/application.yml
@@ -10,3 +10,10 @@ spring:
     username: root
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: deleted
+      logic-delete-value: 1
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
