--- a/spmdv2-common/pom.xml
+++ b/spmdv2-common/pom.xml
@@ -19,11 +19,17 @@
     </properties>
 
     <dependencies>
+        <!-- gson -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <!--            <scope>provided</scope>-->
+        </dependency>
+        <!-- commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <!--            <scope>provided</scope>-->
         </dependency>
     </dependencies>
 </project>
