--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>spmdv2-common</module>
     </modules>
     <properties>
+        <skipTests>true</skipTests>
         <java.version>1.8</java.version>
         <revision>1.0.0-SNAPSHOT</revision>
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
@@ -123,19 +124,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <!--构建工具-->
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <finalName>${project.artifactId}</finalName>
-                    <outputDirectory>../package</outputDirectory>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
