--- a/spmdv2-service/pom.xml
+++ b/spmdv2-service/pom.xml
@@ -4,7 +4,8 @@
     <parent>
         <groupId>cn.silence</groupId>
         <artifactId>spmdv2</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>spmdv2-service</artifactId>
