--- a/spmdv2-web/src/main/resources/application.yml
+++ b/spmdv2-web/src/main/resources/application.yml
@@ -17,3 +17,4 @@ mybatis-plus:
       logic-delete-value: 1
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath*:mapper/**/*Mapper.xml
