:sparkles: 增加 springboot-aop 以及 demo

--- a/spmdv2-service/pom.xml
+++ b/spmdv2-service/pom.xml
@@ -27,6 +27,11 @@
             <groupId>cn.silence</groupId>
             <artifactId>spmdv2-common</artifactId>
         </dependency>
+        <!--springboot aop-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
